[package]
authors = ["Pendulum"]
edition = "2021"
name = "module-pallet-staking-rpc"
version = "1.1.0"

[dependencies]
codec = { workspace = true, default-features = true }
jsonrpsee = { workspace = true, default-features = true, features = ["server", "macros"] }
module-oracle-rpc-runtime-api = { workspace = true, default-features = true }
module-pallet-staking-rpc-runtime-api = { path = "runtime-api" }
sp-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
