[package]
authors = ["Pendulum"]
edition = "2021"
name = "module-pallet-staking-rpc"
version = "1.6.0-a"

[dependencies]
codec = { workspace = true, default-features = true }
jsonrpsee = { workspace = true, default-features = true, features = ["server", "macros", "client"] }
module-oracle-rpc-runtime-api = { workspace = true }
module-pallet-staking-rpc-runtime-api = { path = "runtime-api" }
sp-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
