[package]
name = "runtime-integration-tests"
description = "Pendulum runtime integration tests"
authors = ["Pendulum"]
edition = "2021"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.2", features = ["derive"] }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }

xcm-emulator = { git = "https://github.com/shaunxw/xcm-simulator", rev = "bea35c799d725a4233db6b9108ee2ed5bbfc1aed" }

orml-tokens = {git = "https://github.com/open-web3-stack/open-runtime-module-library.git",  branch = "polkadot-v0.9.40" }
cumulus-pallet-dmp-queue = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40"}
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library",  branch = "polkadot-v0.9.40" }
pendulum-runtime = { path = "../../pendulum"}

statemint-runtime = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }

cumulus-pallet-xcmp-queue = {git = "https://github.com/paritytech/cumulus",  branch = "polkadot-v0.9.40"}


#std = [
#	"codec/std",
#	"scale-info/std",
#
#	"frame-system/std",
#	"frame-support/std",
#	"pallet-balances/std",
#	"sp-std/std",
#	"sp-core/std",
#	"sp-runtime/std",
#	"sp-io/std",
#	"parachain-info/std",
#
#	"xcm/std",
#	"xcm-executor/std",
#	"xcm-builder/std",
#	"pallet-xcm/std",
#
#	"polkadot-core-primitives/std",
#	"polkadot-runtime-parachains/std",
#	"polkadot-parachain/std",
#	"polkadot-primitives/std",
#	"polkadot-runtime/std",
#	"polkadot-runtime-common/std",
#
#	"xcm-emu"
#]
